base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: hello-world
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    name: hello-world
